# Simple_C_CPP

./: CMakeLists.txt
C/: foo.c  foo.h  main.c
CPP/: foo.cpp  foo.hpp  main.cpp
Test/: test.cpp
